# tgrad

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-on-release.yml  release.yml
tgrad/: __init__.py  client.py  config.py  server.py
