[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "tgrad"
version = "0.1.1"
description = "Telegram daemon with CLI and Unix socket"
authors = [{ name = "Tareq Mahmood", email = "check@my.website" }]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
dependencies = ["python-telegram-bot>=20.0"]

[project.scripts]
tgrad-config = "tgrad.config:main"
tgrad-server = "tgrad.server:main"
tgrad-client = "tgrad.client:main"
